bug(homepage social icons): Fix spacing between icons and footer

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -143,7 +143,7 @@ button {
   justify-content: space-between;
   overflow: auto;
   justify-content: center;
-  padding: 10px;
+  padding: 10px 10px 110px 10px;
   align-self: center;
 }
 
@@ -250,7 +250,7 @@ button {
   }
 
   #homepage .social-icons {
-    width: 75%;
+    width: 40%;
     justify-content: space-around;
     margin-top: 10px;
     font-size: 36px;
